--- a/Coursera_capstone.ipynb
+++ b/Coursera_capstone.ipynb
@@ -26,37 +26,96 @@
  "cells": [
   {
    "source": [
-    "This notebook will include the Cousera Capstone project "
+    "# Segmenting and Clustering Neighborhoods in Toronto"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from bs4 import BeautifulSoup\n",
+    "import requests"
+   ]
+  },
+  {
+   "source": [
+    "## Data collection and cleaning"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M'\n",
+    "r = requests.get(url)\n",
+    "soup = BeautifulSoup(r.content)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "table_contents=[]\n",
+    "table=soup.find('table')\n",
+    "for row in table.findAll('td'):\n",
+    "    cell = {}\n",
+    "    if row.span.text=='Not assigned':\n",
+    "        pass\n",
+    "    else:\n",
+    "        cell['PostalCode'] = row.p.text[:3]\n",
+    "        cell['Borough'] = (row.span.text).split('(')[0]\n",
+    "        cell['Neighborhood'] = (((((row.span.text).split('(')[1]).strip(')')).replace(' /',',')).replace(')',' ')).strip(' ')\n",
+    "        table_contents.append(cell)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(table_contents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Hello Capstone Project Course!\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  PostalCode           Borough                      Neighborhood\n",
+       "0        M3A        North York                         Parkwoods\n",
+       "1        M4A        North York                  Victoria Village\n",
+       "2        M5A  Downtown Toronto         Regent Park, Harbourfront\n",
+       "3        M6A        North York  Lawrence Manor, Lawrence Heights\n",
+       "4        M7A      Queen's Park     Ontario Provincial Government"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PostalCode</th>\n      <th>Borough</th>\n      <th>Neighborhood</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>M3A</td>\n      <td>North York</td>\n      <td>Parkwoods</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>M4A</td>\n      <td>North York</td>\n      <td>Victoria Village</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>M5A</td>\n      <td>Downtown Toronto</td>\n      <td>Regent Park, Harbourfront</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>M6A</td>\n      <td>North York</td>\n      <td>Lawrence Manor, Lawrence Heights</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>M7A</td>\n      <td>Queen's Park</td>\n      <td>Ontario Provincial Government</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 17
     }
    ],
    "source": [
-    "print('Hello Capstone Project Course!')"
+    "df.head()"
    ]
   },
   {
