--- a/Coursera_capstone.ipynb
+++ b/Coursera_capstone.ipynb
@@ -1849,62 +1849,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "                                               Borough  Cluster Labels  \\\n",
-       "0                                           North York             2.0   \n",
-       "1                                           North York             2.0   \n",
-       "3                                           North York             2.0   \n",
-       "6                                          Scarborough             2.0   \n",
-       "7                                           North York             2.0   \n",
-       "..                                                 ...             ...   \n",
-       "94                                  EtobicokeNorthwest             2.0   \n",
-       "98                                           Etobicoke             2.0   \n",
-       "100  East TorontoBusiness reply mail Processing Cen...             2.0   \n",
-       "101                                          Etobicoke             2.0   \n",
-       "102                                          Etobicoke             2.0   \n",
+       "                                           Borough  Cluster Labels  \\\n",
+       "2                                 Downtown Toronto             3.0   \n",
+       "15                                Downtown Toronto             3.0   \n",
+       "20                                Downtown Toronto             3.0   \n",
+       "24                                Downtown Toronto             3.0   \n",
+       "92  Downtown TorontoStn A PO Boxes25 The Esplanade             3.0   \n",
+       "99                                Downtown Toronto             3.0   \n",
        "\n",
-       "     1st Most Common Venue 2nd Most Common Venue      3rd Most Common Venue  \\\n",
-       "0     Fast Food Restaurant              Bus Stop          Food & Drink Shop   \n",
-       "1    Portuguese Restaurant          Hockey Arena               Intersection   \n",
-       "3           Clothing Store     Accessories Store                Event Space   \n",
-       "6     Fast Food Restaurant     Accessories Store  Middle Eastern Restaurant   \n",
-       "7      Japanese Restaurant  Caribbean Restaurant                       Café   \n",
-       "..                     ...                   ...                        ...   \n",
-       "94     Rental Car Location            Truck Stop                        Bar   \n",
-       "98                    Pool                 River          Accessories Store   \n",
-       "100            Yoga Studio            Restaurant                        Spa   \n",
-       "101         Baseball Field     Accessories Store         Miscellaneous Shop   \n",
-       "102          Tanning Salon         Burrito Place             Sandwich Place   \n",
+       "   1st Most Common Venue 2nd Most Common Venue 3rd Most Common Venue  \\\n",
+       "2            Coffee Shop                   Pub                  Park   \n",
+       "15           Coffee Shop                  Café        Clothing Store   \n",
+       "20                Bakery           Coffee Shop           Cheese Shop   \n",
+       "24           Coffee Shop    Italian Restaurant                  Café   \n",
+       "92           Coffee Shop    Italian Restaurant    Seafood Restaurant   \n",
+       "99           Coffee Shop   Japanese Restaurant      Sushi Restaurant   \n",
        "\n",
-       "    4th Most Common Venue   5th Most Common Venue  \n",
-       "0                    Park       Accessories Store  \n",
-       "1             Coffee Shop       French Restaurant  \n",
-       "3                Boutique  Furniture / Home Store  \n",
-       "6     Moroccan Restaurant     Monument / Landmark  \n",
-       "7            Dessert Shop                     Gym  \n",
-       "..                    ...                     ...  \n",
-       "94              Drugstore           Garden Center  \n",
-       "98     Miscellaneous Shop     Moroccan Restaurant  \n",
-       "100           Pizza Place    Fast Food Restaurant  \n",
-       "101   Moroccan Restaurant     Monument / Landmark  \n",
-       "102         Grocery Store                     Gym  \n",
-       "\n",
-       "[74 rows x 7 columns]"
+       "   4th Most Common Venue 5th Most Common Venue  \n",
+       "2                 Bakery               Theater  \n",
+       "15        Cosmetics Shop          Cocktail Bar  \n",
+       "20        Farmers Market              Pharmacy  \n",
+       "24        Sandwich Place       Bubble Tea Shop  \n",
+       "92   Japanese Restaurant                   Pub  \n",
+       "99            Restaurant               Gay Bar  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Borough</th>\n      <th>Cluster Labels</th>\n      <th>1st Most Common Venue</th>\n      <th>2nd Most Common Venue</th>\n      <th>3rd Most Common Venue</th>\n      <th>4th Most Common Venue</th>\n      <th>5th Most Common Venue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>North York</td>\n      <td>2.0</td>\n      <td>Fast Food Restaurant</td>\n      <td>Bus Stop</td>\n      <td>Food &amp; Drink Shop</td>\n      <td>Park</td>\n      <td>Accessories Store</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>North York</td>\n      <td>2.0</td>\n      <td>Portuguese Restaurant</td>\n      <td>Hockey Arena</td>\n      <td>Intersection</td>\n      <td>Coffee Shop</td>\n      <td>French Restaurant</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>North York</td>\n      <td>2.0</td>\n      <td>Clothing Store</td>\n      <td>Accessories Store</td>\n      <td>Event Space</td>\n      <td>Boutique</td>\n      <td>Furniture / Home Store</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>Scarborough</td>\n      <td>2.0</td>\n      <td>Fast Food Restaurant</td>\n      <td>Accessories Store</td>\n      <td>Middle Eastern Restaurant</td>\n      <td>Moroccan Restaurant</td>\n      <td>Monument / Landmark</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>North York</td>\n      <td>2.0</td>\n      <td>Japanese Restaurant</td>\n      <td>Caribbean Restaurant</td>\n      <td>Café</td>\n      <td>Dessert Shop</td>\n      <td>Gym</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>EtobicokeNorthwest</td>\n      <td>2.0</td>\n      <td>Rental Car Location</td>\n      <td>Truck Stop</td>\n      <td>Bar</td>\n      <td>Drugstore</td>\n      <td>Garden Center</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>Etobicoke</td>\n      <td>2.0</td>\n      <td>Pool</td>\n      <td>River</td>\n      <td>Accessories Store</td>\n      <td>Miscellaneous Shop</td>\n      <td>Moroccan Restaurant</td>\n    </tr>\n    <tr>\n      <th>100</th>\n      <td>East TorontoBusiness reply mail Processing Cen...</td>\n      <td>2.0</td>\n      <td>Yoga Studio</td>\n      <td>Restaurant</td>\n      <td>Spa</td>\n      <td>Pizza Place</td>\n      <td>Fast Food Restaurant</td>\n    </tr>\n    <tr>\n      <th>101</th>\n      <td>Etobicoke</td>\n      <td>2.0</td>\n      <td>Baseball Field</td>\n      <td>Accessories Store</td>\n      <td>Miscellaneous Shop</td>\n      <td>Moroccan Restaurant</td>\n      <td>Monument / Landmark</td>\n    </tr>\n    <tr>\n      <th>102</th>\n      <td>Etobicoke</td>\n      <td>2.0</td>\n      <td>Tanning Salon</td>\n      <td>Burrito Place</td>\n      <td>Sandwich Place</td>\n      <td>Grocery Store</td>\n      <td>Gym</td>\n    </tr>\n  </tbody>\n</table>\n<p>74 rows × 7 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Borough</th>\n      <th>Cluster Labels</th>\n      <th>1st Most Common Venue</th>\n      <th>2nd Most Common Venue</th>\n      <th>3rd Most Common Venue</th>\n      <th>4th Most Common Venue</th>\n      <th>5th Most Common Venue</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2</th>\n      <td>Downtown Toronto</td>\n      <td>3.0</td>\n      <td>Coffee Shop</td>\n      <td>Pub</td>\n      <td>Park</td>\n      <td>Bakery</td>\n      <td>Theater</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>Downtown Toronto</td>\n      <td>3.0</td>\n      <td>Coffee Shop</td>\n      <td>Café</td>\n      <td>Clothing Store</td>\n      <td>Cosmetics Shop</td>\n      <td>Cocktail Bar</td>\n    </tr>\n    <tr>\n      <th>20</th>\n      <td>Downtown Toronto</td>\n      <td>3.0</td>\n      <td>Bakery</td>\n      <td>Coffee Shop</td>\n      <td>Cheese Shop</td>\n      <td>Farmers Market</td>\n      <td>Pharmacy</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>Downtown Toronto</td>\n      <td>3.0</td>\n      <td>Coffee Shop</td>\n      <td>Italian Restaurant</td>\n      <td>Café</td>\n      <td>Sandwich Place</td>\n      <td>Bubble Tea Shop</td>\n    </tr>\n    <tr>\n      <th>92</th>\n      <td>Downtown TorontoStn A PO Boxes25 The Esplanade</td>\n      <td>3.0</td>\n      <td>Coffee Shop</td>\n      <td>Italian Restaurant</td>\n      <td>Seafood Restaurant</td>\n      <td>Japanese Restaurant</td>\n      <td>Pub</td>\n    </tr>\n    <tr>\n      <th>99</th>\n      <td>Downtown Toronto</td>\n      <td>3.0</td>\n      <td>Coffee Shop</td>\n      <td>Japanese Restaurant</td>\n      <td>Sushi Restaurant</td>\n      <td>Restaurant</td>\n      <td>Gay Bar</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 69
+     "execution_count": 71
     }
    ],
    "source": [
-    "toronto_merged.loc[toronto_merged['Cluster Labels'] == 2, toronto_merged.columns[[1] + list(range(5, toronto_merged.shape[1]))]]"
+    "toronto_merged.loc[toronto_merged['Cluster Labels'] == 3, toronto_merged.columns[[1] + list(range(5, toronto_merged.shape[1]))]]"
    ]
   },
   {
@@ -1937,6 +1920,14 @@
    "source": [
     "toronto_merged.loc[toronto_merged['Cluster Labels'] == 4, toronto_merged.columns[[1] + list(range(5, toronto_merged.shape[1]))]]"
    ]
+  },
+  {
+   "source": [
+    "## 6. Conclusions\n",
+    "In this analysis, I have clustered the neighborhoods of Toronto according to the number of venues. The first cluster is characterized by many cafés and restaurants. In the second cluster there are large number of Coffee shops and hotels. The third contains low quantity of venues that are highly spread. In the 4th one, there is many coffee shops and restaurants, and in the 5th one, the major venue is Clothing store."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
